draft-saintandre-tls-server-id-check-14

--- a/draft-saintandre-tls-server-id-check-14.html
+++ b/draft-saintandre-tls-server-id-check-14.html
@@ -154,10 +154,10 @@
 <tr><td class="header">Network Working Group</td><td class="header">P. Saint-Andre</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Cisco</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">J. Hodges</td></tr>
-<tr><td class="header">Expires: July 9, 2011</td><td class="header">PayPal</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">January 5, 2011</td></tr>
+<tr><td class="header">Expires: July 16, 2011</td><td class="header">PayPal</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">January 12, 2011</td></tr>
 </table></td></tr></table>
-<h1><br />Representation and Verification of Domain-Based Application Service Identity within Internet Public Key Infrastructure Using X.509 (PKIX) Certificates in the Context of Transport Layer Security (TLS)<br />draft-saintandre-tls-server-id-check-13</h1>
+<h1><br />Representation and Verification of Domain-Based Application Service Identity within Internet Public Key Infrastructure Using X.509 (PKIX) Certificates in the Context of Transport Layer Security (TLS)<br />draft-saintandre-tls-server-id-check-14</h1>
 
 <h3>Abstract</h3>
 
@@ -178,7 +178,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on July 9, 2011.</p>
+This Internet-Draft will expire on July 16, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -988,9 +988,11 @@ Requesting Server Certificates</h3>
 </p>
 <p>In general, service providers are encouraged to request certificates that include all of the identifier types that are required or recommended for the application service type that will be secured using the certificate to be issued.
 </p>
-<p>If the certificate will be used for only a single application service type, then the service provider is encouraged to request a certificate that includes a DNS-ID and, if appropriate for the service type, an SRV-ID or URI-ID that limits the deployment scope of the certificate to only the defined service type.
+<p>If the certificate might be used for any type of application service, then the service provider is encouraged to request a certificate that includes only a DNS-ID.
 </p>
-<p>If the certificate will be used for multiple application service types, then the service provider is discouraged from requesting one certificate with multiple kinds of SRV-IDs or URI-IDs identifying each different application service type.  Instead, the service provider is encouraged to request either (a) one certificate per service type or (b) a single certificate that contains only an identifier type of DNS-ID representing the DNS domain name(s) for the provided service(s).
+<p>If the certificate will be used for only a single type of application service, then the service provider is encouraged to request a certificate that includes a DNS-ID and, if appropriate for the service type, an SRV-ID or URI-ID that limits the deployment scope of the certificate to only the defined service type.
+</p>
+<p>If a service provider offering multiple service types (e.g., a world wide web service, an email service, and an instant messaging service) wishes to limit the applicability of certificates using SRV-IDs or URI-IDs, then the service provider is encouraged to request multiple certificates, i.e., one certificate per service type. Conversely, the service provider is discouraged from requesting a single certificate containing multiple SRV-IDs or URI-IDs identifying each different application service type.  This guideline does not apply to service type "bundles" that are used to identify manifold distinct access methods to the same underlying application (e.g., an email application with access methods denoted by the service types of "imap", "imaps", "pop3", "pop3s", and "submission" as described in <a class='info' href='#EMAIL-SRV'>[EMAIL&#8209;SRV]<span> (</span><span class='info'>Daboo, C., &ldquo;Use of SRV Records for Locating Email Submission/Access services,&rdquo; May&nbsp;2010.</span><span>)</span></a>).
 </p>
 <a name="verify"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -1099,7 +1101,7 @@ Examples</h3>
 
 <p>A web browser that is connecting via HTTPS to the website at "www.example.com" might have two reference identifiers: a DNS-ID of "www.example.com" and, as a fallback, a CN-ID of "www.example.com".
 </p>
-<p>A mail user agent that is connecting via IMAP to the email service at "example.net" (resolved as "mail.example.net") might have two reference identifiers: an SRV-ID of "_imaps.example.net" (see <a class='info' href='#EMAIL-SRV'>[EMAIL&#8209;SRV]<span> (</span><span class='info'>Daboo, C., &ldquo;Use of SRV Records for Locating Email Submission/Access services,&rdquo; May&nbsp;2010.</span><span>)</span></a>) and a DNS-ID of "example.net".
+<p>A mail user agent that is connecting via IMAP to the email service at "example.net" (resolved as "mail.example.net") might have four reference identifiers: SRV-IDs of "_imaps.example.net" and "_imaps.mail.example.net" (see <a class='info' href='#EMAIL-SRV'>[EMAIL&#8209;SRV]<span> (</span><span class='info'>Daboo, C., &ldquo;Use of SRV Records for Locating Email Submission/Access services,&rdquo; May&nbsp;2010.</span><span>)</span></a>) and DNS-IDs of "example.net" and "mail.example.net".  (A legacy email user agent would not support <a class='info' href='#EMAIL-SRV'>[EMAIL&#8209;SRV]<span> (</span><span class='info'>Daboo, C., &ldquo;Use of SRV Records for Locating Email Submission/Access services,&rdquo; May&nbsp;2010.</span><span>)</span></a> and therefore would probably be explicitly configured to connect to "mail.example.net", whereas an SRV-aware user agent would derive "example.net" from an email address of the form "user@example.net" but might also accept "mail.example.net" as the DNS domain name portion of reference identifiers for the service.)
 </p>
 <p>A voice-over-IP (VoIP) user agent that is connecting via SIP to the voice service at "voice.example.edu" might have only one reference identifier: a URI-ID of "sip:voice.example.edu" (see <a class='info' href='#SIP-CERTS'>[SIP&#8209;CERTS]<span> (</span><span class='info'>Gurbani, V., Lawrence, S., and A. Jeffrey, &ldquo;Domain Certificates in the Session Initiation Protocol (SIP),&rdquo; June&nbsp;2010.</span><span>)</span></a>).
 </p>
@@ -1191,7 +1193,7 @@ Checking of Wildcard Certificates</h3>
 <br />
 
 </li>
-<li>The client MAY match a presented identifier in which the wildcard character is not the only character of the label (e.g., baz*.example.net and *baz.example.net and b*z.example.net would be taken to match baz1.example.net and foobaz.example.net and buzz.example.net, respectively).  However, the client SHOULD NOT attempt to match a presented identifier where the wildcard character is embedded within an NR-LDH label, A-label, or U-label <a class='info' href='#IDNA-DEFS'>[IDNA&#8209;DEFS]<span> (</span><span class='info'>Klensin, J., &ldquo;Internationalized Domain Names for Applications (IDNA): Definitions and Document Framework,&rdquo; August&nbsp;2010.</span><span>)</span></a> of an internationalized domain name <a class='info' href='#IDNA-PROTO'>[IDNA&#8209;PROTO]<span> (</span><span class='info'>Klensin, J., &ldquo;Internationalized Domain Names in Applications (IDNA): Protocol,&rdquo; August&nbsp;2010.</span><span>)</span></a>.
+<li>The client MAY match a presented identifier in which the wildcard character is not the only character of the label (e.g., baz*.example.net and *baz.example.net and b*z.example.net would be taken to match baz1.example.net and foobaz.example.net and buzz.example.net, respectively).  However, the client SHOULD NOT attempt to match a presented identifier where the wildcard character is embedded within an A-label or U-label <a class='info' href='#IDNA-DEFS'>[IDNA&#8209;DEFS]<span> (</span><span class='info'>Klensin, J., &ldquo;Internationalized Domain Names for Applications (IDNA): Definitions and Document Framework,&rdquo; August&nbsp;2010.</span><span>)</span></a> of an internationalized domain name <a class='info' href='#IDNA-PROTO'>[IDNA&#8209;PROTO]<span> (</span><span class='info'>Klensin, J., &ldquo;Internationalized Domain Names in Applications (IDNA): Protocol,&rdquo; August&nbsp;2010.</span><span>)</span></a>.
 </li>
 </ol><p>
           
@@ -1210,7 +1212,7 @@ Checking of Common Names</h3>
 <a name="rfc.section.6.5"></a><h3>6.5.&nbsp;
 Matching the Application Type Portion</h3>
 
-<p>When checking identifiers of type SRV-ID and URI-ID, a client SHOULD also check the service type of the application service with which it communicates (in addition to checking the domain name as described above).  This is a best practice because typically a client is not designed to communicate with all kinds of services using all possible application protocols, but instead is designed to communicate with one kind of service, such as websites, email services, VoIP services, or IM services.
+<p>If a client supports checking of identifiers of type SRV-ID and URI-ID, it MUST also check the service type of the application service with which it communicates (in addition to checking the domain name as described above).  This is a best practice because typically a client is not designed to communicate with all kinds of services using all possible application protocols, but instead is designed to communicate with one kind of service, such as websites, email services, VoIP services, or IM services.
 </p>
 <p>The service type is verified by means of an SRV-ID or a URI-ID.
 </p>
@@ -1334,7 +1336,7 @@ Wildcard Certificates</h3>
 <br />
 
 </li>
-<li>There is no specification that defines how the wildcard character may be embedded within the NR-LDH labels, A-labels, or U-labels <a class='info' href='#IDNA-DEFS'>[IDNA&#8209;DEFS]<span> (</span><span class='info'>Klensin, J., &ldquo;Internationalized Domain Names for Applications (IDNA): Definitions and Document Framework,&rdquo; August&nbsp;2010.</span><span>)</span></a> of an internationalized domain name [IDNA-PROTO]; as a result, implementations are strongly discouraged from including or attempting to check for the wildcard character emdedded within NR-LDH labels, A-labels, or U-labels of an internationalized domain name (e.g., "xn--kcry6tjko*.example.org").  Note, however, that a presented domain name identifier MAY contain the wildcard character as long as that character occupies the entire left-most label position, where some or all of the remaining labels are NR-LDH labels, A-labels, or U-labels (e.g., "*.xn--kcry6tjko.example.org").
+<li>There is no specification that defines how the wildcard character may be embedded within the A-labels or U-labels <a class='info' href='#IDNA-DEFS'>[IDNA&#8209;DEFS]<span> (</span><span class='info'>Klensin, J., &ldquo;Internationalized Domain Names for Applications (IDNA): Definitions and Document Framework,&rdquo; August&nbsp;2010.</span><span>)</span></a> of an internationalized domain name [IDNA-PROTO]; as a result, implementations are strongly discouraged from including or attempting to check for the wildcard character embedded within the A-labels or U-labels of an internationalized domain name (e.g., "xn--kcry6tjko*.example.org").  Note, however, that a presented domain name identifier MAY contain the wildcard character as long as that character occupies the entire left-most label position, where all of the remaining labels are valid NR-LDH labels, A-labels, or U-labels (e.g., "*.xn--kcry6tjko.example.org").
             
 </li>
 </ul><p>
