draft-ietf-dccp-tfrc-rtt-option-05

--- a/draft-ietf-dccp-tfrc-rtt-option-05.html
+++ b/draft-ietf-dccp-tfrc-rtt-option-05.html
@@ -408,10 +408,10 @@
 </tr>
 <tr>
 <td class="left">Intended status: Standards Track</td>
-<td class="right">March 09, 2011</td>
+<td class="right">March 28, 2011</td>
 </tr>
 <tr>
-<td class="left">Expires: September 10, 2011</td>
+<td class="left">Expires: September 29, 2011</td>
 <td class="right"></td>
 </tr>
 
@@ -420,7 +420,7 @@
   </table>
 
   <p class="title">Sender RTT Estimate Option for DCCP<br />
-  <span class="filename">draft-ietf-dccp-tfrc-rtt-option-04.txt</span></p>
+  <span class="filename">draft-ietf-dccp-tfrc-rtt-option-05.txt</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document specifies an update to the round trip time (RTT) estimation algorithm used for TFRC (TCP Friendly Rate Control) congestion control by the Datagram Congestion Control Protocol (DCCP). It updates specifications for the CCID-3 and CCID-4 Congestion Control IDs of DCCP.</p>
@@ -430,7 +430,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on September 10, 2011.</p>
+<p>This Internet-Draft will expire on September 29, 2011.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -605,7 +605,7 @@
 </pre>
 <p id="rfc.section.3.2.1.p.4">The 1..3 value bytes of the option data carry the current RTT estimate of the sender, using a granularity of 1 microsecond. This allows values up to 16.7 seconds (corresponding to 0xFFFFFE) to be communicated.</p>
 <p id="rfc.section.3.2.1.p.5">The value 0xFFFFFF is reserved to indicate significant delay spikes, larger than 16.7 seconds. This is qualitative rather than quantitative information, to alert the receiver that there is a network problem (for instance jamming on a wireless channel).</p>
-<p id="rfc.section.3.2.1.p.6">The use of the RTT Estimate Option on networks  with RTTs larger than 16.7 seconds is not specified by this document.</p>
+<p id="rfc.section.3.2.1.p.6">The use of the RTT Estimate Option on networks  with RTTs larger than 16.7 seconds is not specified by this document (as per <a href="#usage">Section 3.3</a>, the sender would then always report 0xFFFFFF).</p>
 <p id="rfc.section.3.2.1.p.7">A value of 0 indicates the absence of a valid RTT sample. The sender MUST set the value to 0 if it does not yet have an RTT estimate.</p>
 <p id="rfc.section.3.2.1.p.8">The sender SHOULD select the smallest format suitable to carry the RTT estimate (i.e., less than 1 byte of leading zeroes).</p>
 <h1 id="rfc.section.3.2.2">
@@ -638,7 +638,7 @@
 <h1 id="rfc.section.3.3">
 <a href="#rfc.section.3.3">3.3.</a> <a href="#usage" id="usage">Basic Usage</a>
 </h1>
-<p id="rfc.section.3.3.p.1">When the Send RTT Estimate Feature is enabled, the sender MUST provide an RTT Estimate Option on all of its Data, DataAck, Sync, and SyncAck packets. It MAY in addition provide the RTT Estimate Option on other packet types, such as DCCP-Ack.</p>
+<p id="rfc.section.3.3.p.1">When the Send RTT Estimate Feature is enabled, the sender MUST provide an RTT Estimate Option on all of its Data, DataAck, Sync, and SyncAck packets. It MAY in addition provide the RTT Estimate Option on other packet types, such as DCCP-Ack. If the RTT is larger than the maximum representable value (0xFFFFFE), the sender MUST set the value of the RTT Estimate Option to 0xFFFFFF.</p>
 <p id="rfc.section.3.3.p.2">The sender MUST implement and continue to update the CCVal window counter as specified in <a href="#RFC4342">[RFC4342]</a>, section 8.1, even when the Send RTT Estimate Feature is on.</p>
 <p id="rfc.section.3.3.p.3">When the Send RTT Estimate Feature is enabled, the receiver MUST use the value reported by the RTT Estimate Option in all places that require a RTT (listed at the begin of <a href="#RATIONALE">Section 2</a>).  If the receiver encounters an invalid RTT Estimate Option (<a href="#option">Section 3.2.1</a>), it MUST reset the connection with Reset Code 5, "Option Error", where the Data 1..3 fields are set to the first 3 bytes of the offending RTT Estimate Option.</p>
 <p id="rfc.section.3.3.p.4">The receiver SHOULD track the long-term RTT estimate using a moving average, such as the one specified in <a href="#RFC5348">[RFC5348]</a>, 4.3. This long-term estimate is referred to as "receiver_RTT" below.</p>
