--- a/draft-ietf-dnsop-as112-ops-08.html
+++ b/draft-ietf-dnsop-as112-ops-08.html
@@ -410,12 +410,12 @@
 <td class="right">W. Maton</td>
 </tr>
 <tr>
-<td class="left">Expires: October 30, 2011</td>
+<td class="left">Expires: October 31, 2011</td>
 <td class="right">NRC-CNRC</td>
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">April 28, 2011</td>
+<td class="right">April 29, 2011</td>
 </tr>
 
     	
@@ -423,18 +423,18 @@
   </table>
 
   <p class="title">AS112 Nameserver Operations<br />
-  <span class="filename">draft-ietf-dnsop-as112-ops-07</span></p>
+  <span class="filename">draft-ietf-dnsop-as112-ops-08</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>Many sites connected to the Internet make use of IPv4 addresses that are not globally-unique.  Examples are the addresses designated in RFC 1918 for private use within individual sites.</p>
 <p>Devices in such environments may occasionally originate Domain Name System (DNS) queries (so-called "reverse lookups") corresponding to those private-use addresses. Since the addresses concerned have only local significance, it is good practice for site administrators to ensure that such queries are answered locally. However, it is not uncommon for such queries to follow the normal delegation path in the public DNS instead of being answered within the site.</p>
-<p>It is not possible for public DNS servers to give useful answers to such queries. In addition, due to the wide deployment of private-use addresses and the continuing growth of the Internet, the volume of such queries is large and growing.  The AS112 project aims to provide a distributed sink for such queries in order to reduce the load on the root and IN-ADDR.ARPA authoritative servers. The AS112 project is named after the Autonomous System Number (ASN) that was assigned to it.</p>
+<p>It is not possible for public DNS servers to give useful answers to such queries. In addition, due to the wide deployment of private-use addresses and the continuing growth of the Internet, the volume of such queries is large and growing.  The AS112 project aims to provide a distributed sink for such queries in order to reduce the load on the IN-ADDR.ARPA authoritative servers.  The AS112 project is named after the Autonomous System Number (ASN) that was assigned to it.</p>
 <p>This document describes the steps required to install a new AS112 node, and offers advice relating to such a node's operation.</p>
 <h1 id="rfc.status"><a href="#rfc.status">Status of this Memo</a></h1>
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on October 30, 2011.</p>
+<p>This Internet-Draft will expire on October 31, 2011.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -505,9 +505,10 @@
 <a href="#rfc.section.1">1.</a> Introduction</h1>
 <p id="rfc.section.1.p.1">Many sites connected to the Internet make use of IPv4 addresses that are not globally unique.  Examples are the addresses designated in <a href="#RFC1918">[RFC1918]</a> for private use within individual sites.</p>
 <p id="rfc.section.1.p.2">Devices in such environments may occasionally originate Domain Name System (DNS) <a href="#RFC1034">[RFC1034]</a> queries (so-called "reverse lookups") corresponding to those private-use addresses. Since the addresses concerned have only local significance, it is good practice for site administrators to ensure that such queries are answered locally <a href="#I-D.ietf-dnsop-default-local-zones">[I-D.ietf-dnsop-default-local-zones]</a>.  However, it is not uncommon for such queries to follow the normal delegation path in the public DNS instead of being answered within the site.</p>
-<p id="rfc.section.1.p.3">It is not possible for public DNS servers to give useful answers to such queries. In addition, due to the wide deployment of private-use addresses and the continuing growth of the Internet, the volume of such queries is large and growing. The AS112 project aims to provide a distributed sink for such queries in order to reduce the load on the root and IN-ADDR.ARPA authoritative servers.</p>
+<p id="rfc.section.1.p.3">It is not possible for public DNS servers to give useful answers to such queries. In addition, due to the wide deployment of private-use addresses and the continuing growth of the Internet, the volume of such queries is large and growing. The AS112 project aims to provide a distributed sink for such queries in order to reduce the load on the <a href="#RFC5855">IN-ADDR.ARPA authoritative servers</a> <cite title="NONE">[RFC5855]</cite>.</p>
 <p id="rfc.section.1.p.4">The AS112 project encompasses a loosely coordinated collection of independently operated nameservers. Each nameserver functions as a single node in an AS112 <a href="#RFC4786">anycast cloud</a> <cite title="NONE">[RFC4786]</cite>, and is configured to answer authoritatively for a particular set of nominated zones.</p>
 <p id="rfc.section.1.p.5">The AS112 project is named after the Autonomous System Number (ASN) that was assigned to it.</p>
+<p id="rfc.section.1.p.6">It is noted that recent guidance exists on the choice of origin ASN for anycast services that is inconsistent with the choices made in the AS112 project <a href="#I-D.ietf-grow-unique-origin-as">[I-D.ietf-grow-unique-origin-as]</a>.</p>
 <h1 id="rfc.section.2">
 <a href="#rfc.section.2">2.</a> AS112 DNS Service</h1>
 <h1 id="rfc.section.2.1">
@@ -558,13 +559,13 @@
 <a href="#rfc.section.3.3">3.3.</a> Operating System and Host Considerations</h1>
 <p id="rfc.section.3.3.p.1">Examples in this document are based on UNIX and UNIX-like operating systems, but other operating systems exist which are suitable for use in construction of an AS112 node.</p>
 <p id="rfc.section.3.3.p.2">The chosen platform should include support for either cloned loopback interfaces, or the capability to bind multiple addresses to a single loopback interface. The addresses of the nameservers listed in <a href="#nameservers">Section 2.2</a> will be configured on these interfaces in order that the DNS software can respond to queries properly.</p>
-<p id="rfc.section.3.3.p.3">A host that is configured to act as an AS112 anycast node should be dedicated to that purpose, and should not be used to simultaneously provide other services.</p>
+<p id="rfc.section.3.3.p.3">A host that is configured to act as an AS112 anycast node should be dedicated to that purpose, and should not be used to simultaneously provide other services. This guidance is provided due to the unpredictable (and occasionally high) traffic levels that AS112 nodes have been seen to attract.</p>
 <p id="rfc.section.3.3.p.4">System startup scripts should be arranged such that the various AS112-related components start automatically following a system reboot. The order in which interfaces are configured and software components started should be arranged such that routing software startup follows DNS software startup, and DNS software startup follows loopback interface configuration.</p>
 <p id="rfc.section.3.3.p.5">Wrapper scripts or other arrangements should be employed to ensure that the anycast service prefix for AS112 is not advertised while either the anycast addresses are not configured, or while the DNS software is not running.</p>
 <h1 id="rfc.section.3.4">
 <a href="#rfc.section.3.4">3.4.</a> Routing Software</h1>
 <p id="rfc.section.3.4.p.1">AS112 nodes signal the availability of AS112 nameservers to the Internet using <a href="#RFC4271">BGP</a> <cite title="NONE">[RFC4271]</cite>: each AS112 node is a BGP speaker, and announces the prefix 192.175.48.0/24 to the Internet with origin AS 112 (see also <a href="#nameservers">Section 2.2</a>).</p>
-<p id="rfc.section.3.4.p.2">The examples in this document are based on the <a href="http://www.quagga.net/">Quagga Routing Suite</a>, but other software packages exist which also provide suitable BGP support for AS112 nodes.</p>
+<p id="rfc.section.3.4.p.2">The examples in this document are based on the <a href="http://www.quagga.net/">Quagga Routing Suite</a> running on Linux, but other software packages exist which also provide suitable BGP support for AS112 nodes.</p>
 <p id="rfc.section.3.4.p.3">The "bgpd.conf" file is used by Quagga's bgpd daemon, which provides BGP protocol support. The router id in this example is 203.0.113.1; the AS112 node peers with external peers 192.0.2.1 and 192.0.2.2.  Note the local AS number 112, and the origination of the prefix 192.175.48.0/24.</p>
 <div id="#rfc.figure.1"></div>
 <pre>
@@ -605,16 +606,8 @@ interface eth0
 <a href="#rfc.section.3.5">3.5.</a> <a href="#dns" id="dns">DNS Software</a>
 </h1>
 <p id="rfc.section.3.5.p.1">Although the queries received by AS112 nodes are definitively misdirected, it is important that they be answered in a manner that is accurate and consistent.  For this reason AS112 nodes operate as <a href="#RFC1034">fully-functional and standards-compliant DNS authoritative servers</a> <cite title="NONE">[RFC1034]</cite>, and hence require DNS software.</p>
-<p id="rfc.section.3.5.p.2">Suitable choices of free DNS software for AS112 nodes include, but are not limited to: </p>
-
-<ul>
-<li><a href="http://www.isc.org/software/BIND/">ISC BIND9</a></li>
-<li><a href="http://www.nlnetlabs.nl/nsd/">NLnet Labs' NSD</a></li>
-</ul>
-
-<p> </p>
-<p id="rfc.section.3.5.p.3">Examples in this document are based on ISC BIND9.</p>
-<p id="rfc.section.3.5.p.4">The following is a sample BIND9 "named.conf" file for a dedicated AS112 server. Note that the nameserver is configured to act as an authoritative-only server (i.e.  recursion is disabled).  The nameserver is also configured to listen on the various AS112 anycast nameserver addresses, as well as its local addresses.</p>
+<p id="rfc.section.3.5.p.2">Examples in this document are based on <a href="http://www.isc.org/software/BIND/">ISC BIND9</a>, but other DNS software exists which is suitable for use in construction of an AS112 node.</p>
+<p id="rfc.section.3.5.p.3">The following is a sample BIND9 "named.conf" file for a dedicated AS112 server. Note that the nameserver is configured to act as an authoritative-only server (i.e.  recursion is disabled).  The nameserver is also configured to listen on the various AS112 anycast nameserver addresses, as well as its local addresses.</p>
 <div id="#rfc.figure.3"></div>
 <pre>
 // named.conf
@@ -689,7 +682,7 @@ zone "hostname.as112.net" {
   file "db.hostname.as112.net";
 };
           </pre>
-<p id="rfc.section.3.5.p.5">The "db.empty" file follows, below.  This is the source data used to populate all the IN-ADDR.ARPA zones listed in <a href="#zones">Section 2.1</a>. Note that the RNAME specified in the SOA record corresponds to hostmaster@root-servers.org, a suitable e-mail address for receiving technical queries about these zones.</p>
+<p id="rfc.section.3.5.p.4">The "db.empty" file follows, below.  This is the source data used to populate all the IN-ADDR.ARPA zones listed in <a href="#zones">Section 2.1</a>. Note that the RNAME specified in the SOA record corresponds to hostmaster@root-servers.org, a suitable e-mail address for receiving technical queries about these zones.</p>
 <div id="#rfc.figure.4"></div>
 <pre>
 ; db.empty
@@ -713,8 +706,8 @@ $TTL    1W
 ; site hosting this AS112 node should not be hosted on this
 ; nameserver.
           </pre>
-<p id="rfc.section.3.5.p.6">The "db.hostname.as112.net" file follows, below.  This zone contains various resource records that provide operational data to users for troubleshooting or measurement purposes, and should be edited to suit local circumstances.  Note that the response to the query "HOSTNAME.AS112.NET IN TXT" should fit within a 512 octet DNS/UDP datagram: i.e. it should be available over UDP transport without requiring EDNS0 support.</p>
-<p id="rfc.section.3.5.p.7">The optional <a href="#RFC1876">LOC record</a> <cite title="NONE">[RFC1876]</cite> included in the zone apex provides information about the geospatial location of the node.</p>
+<p id="rfc.section.3.5.p.5">The "db.hostname.as112.net" file follows, below.  This zone contains various resource records that provide operational data to users for troubleshooting or measurement purposes, and should be edited to suit local circumstances.  Note that the response to the query "HOSTNAME.AS112.NET IN TXT" should fit within a 512 octet DNS/UDP datagram: i.e. it should be available over UDP transport without requiring EDNS0 support.</p>
+<p id="rfc.section.3.5.p.6">The optional <a href="#RFC1876">LOC record</a> <cite title="NONE">[RFC1876]</cite> included in the zone apex provides information about the geospatial location of the node.</p>
 <div id="#rfc.figure.5"></div>
 <pre>
 ; db.hostname.as112.net
@@ -759,7 +752,7 @@ $TTL    1W
 <h1 id="rfc.section.4.3">
 <a href="#rfc.section.4.3">4.3.</a> Statistics and Measurement</h1>
 <p id="rfc.section.4.3.p.1">Use of the AS112 node should be measured in order to track long-term trends, identify anomalous conditions, and to ensure that the configuration of the AS112 node is sufficient to handle the query load.</p>
-<p id="rfc.section.4.3.p.2">Examples of free monitoring tools that might be useful to operators of AS112 nodes include, but are not limited to: </p>
+<p id="rfc.section.4.3.p.2">Examples of free monitoring tools that might be useful to operators of AS112 nodes include: </p>
 
 <ul>
 <li><a href="http://www.linux.it/~md/software/">bindgraph</a></li>
@@ -795,7 +788,7 @@ $TTL    1W
 <p id="rfc.section.8.p.5">The zones hosted by AS112 servers are not signed with DNSSEC <a href="#RFC4033">[RFC4033]</a>. Given the distributed and loosely-coordinated structure of the AS112 service, the zones concerned could only be signed if the private key material used was effectively public, obviating any security benefit resulting from the use of those keys.</p>
 <h1 id="rfc.section.9">
 <a href="#rfc.section.9">9.</a> Acknowledgements</h1>
-<p id="rfc.section.9.p.1">The authors wish to acknowledge the assistance of Bill Manning, John Brown, Marco D'Itri, Daniele Arena, Stephane Bortzmeyer, Frank Habicht, Chris Thompson, Peter Losher, Peter Koch and Alfred Hoenes in the preparation of this document.</p>
+<p id="rfc.section.9.p.1">The authors wish to acknowledge the assistance of Bill Manning, John Brown, Marco D'Itri, Daniele Arena, Stephane Bortzmeyer, Frank Habicht, Chris Thompson, Peter Losher, Peter Koch, Alfred Hoenes and S. Moonesamy in the preparation of this document.</p>
 <h1 id="rfc.references">
 <a href="#rfc.references">10.</a> References</h1>
 <h1 id="rfc.references.1">
@@ -846,6 +839,11 @@ $TTL    1W
 <a>Cotton, M.</a> and <a>L. Vegoda</a>, "<a href="http://tools.ietf.org/html/rfc5735">Special Use IPv4 Addresses</a>", BCP 153, RFC 5735, January 2010.</td>
 </tr>
 <tr>
+<td class="reference"><b id="RFC5855">[RFC5855]</b></td>
+<td class="top">
+<a>Abley, J.</a> and <a>T. Manderson</a>, "<a href="http://tools.ietf.org/html/rfc5855">Nameservers for IPv4 and IPv6 Reverse Zones</a>", BCP 155, RFC 5855, May 2010.</td>
+</tr>
+<tr>
 <td class="reference"><b id="I-D.ietf-dnsop-default-local-zones">[I-D.ietf-dnsop-default-local-zones]</b></td>
 <td class="top">
 <a>Andrews, M</a>, "<a href="http://tools.ietf.org/html/draft-ietf-dnsop-default-local-zones-15">Locally-served DNS Zones</a>", Internet-Draft draft-ietf-dnsop-default-local-zones-15, March 2011.</td>
@@ -853,7 +851,12 @@ $TTL    1W
 <tr>
 <td class="reference"><b id="I-D.ietf-dnsop-as112-under-attack-help-help">[I-D.ietf-dnsop-as112-under-attack-help-help]</b></td>
 <td class="top">
-<a>Abley, J</a> and <a>W Maton</a>, "<a href="http://tools.ietf.org/html/draft-ietf-dnsop-as112-under-attack-help-help-06">I'm Being Attacked by PRISONER.IANA.ORG!</a>", Internet-Draft draft-ietf-dnsop-as112-under-attack-help-help-06, April 2011.</td>
+<a>Abley, J</a> and <a>W Maton</a>, "<a href="http://tools.ietf.org/html/draft-ietf-dnsop-as112-under-attack-help-help-05">I'm Being Attacked by PRISONER.IANA.ORG!</a>", Internet-Draft draft-ietf-dnsop-as112-under-attack-help-help-05, March 2011.</td>
+</tr>
+<tr>
+<td class="reference"><b id="I-D.ietf-grow-unique-origin-as">[I-D.ietf-grow-unique-origin-as]</b></td>
+<td class="top">
+<a>McPherson, D</a>, <a>Donnelly, R</a> and <a>F Scalzo</a>, "<a href="http://tools.ietf.org/html/draft-ietf-grow-unique-origin-as-00">Unique Per-Node Origin ASNs for Globally Anycasted Services</a>", Internet-Draft draft-ietf-grow-unique-origin-as-00, November 2010.</td>
 </tr>
 </tbody></table>
 <h1 id="rfc.appendix.Appendix A">
@@ -886,6 +889,10 @@ $TTL    1W
 <dd style="margin-left: 8">Updated following review from Peter Koch.</dd>
 <dt>06</dt>
 <dd style="margin-left: 8">Updated following review from Alfred Hoenes.</dd>
+<dt>07</dt>
+<dd style="margin-left: 8">Updated following IESG review.</dd>
+<dt>08</dt>
+<dd style="margin-left: 8">Updated following review by S. Moonesamy.</dd>
 </dl>
 
 <p> </p>
