draft-morton-ippm-rfc4148-obsolete-02

--- a/draft-morton-ippm-rfc4148-obsolete-02.html
+++ b/draft-morton-ippm-rfc4148-obsolete-02.html
@@ -154,19 +154,21 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Network Working Group</td><td class="header">A. Morton</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">AT&amp;T Labs</td></tr>
-<tr><td class="header">Intended status: Standards Track</td><td class="header">July 1, 2010</td></tr>
-<tr><td class="header">Expires: January 2, 2011</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Intended status: Standards Track</td><td class="header">October 25, 2010</td></tr>
+<tr><td class="header">Expires: April 28, 2011</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
 <h1><br />RFC 4148 and the IPPM Metrics
-    Registry are Obsolete<br />draft-morton-ippm-rfc4148-obsolete-01</h1>
+    Registry are Obsolete<br />draft-morton-ippm-rfc4148-obsolete-02</h1>
 
 <h3>Abstract</h3>
 
 <p>This memo recommends that RFC 4148, the IP Performance Metrics (IPPM)
       Registry be reclassified as Historic, and the IANA IPPM Metrics Registry
       itself be withdrawn from use. The current registry structure has been
-      found to be insufficiently detailed to uniquely identify IPPM
-      metrics.
+      found to be insufficiently detailed to uniquely identify IPPM metrics.
+      Despite apparent efforts to find current or even future users, no one
+      has responded to the third quarter of 2010 call for interest in the RFC
+      4148 registry.
 </p>
 <h3>Requirements Language</h3>
 
@@ -191,7 +193,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on January 2, 2011.</p>
+This Internet-Draft will expire on April 28, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -264,6 +266,16 @@ Introduction</h3>
       effectively create a new registry [draft-stephan-ippm-registry-ext-00,
       work in progress].
 </p>
+<p>Despite apparent efforts to find current or even future users, no one
+      has responded to the third quarter of 2010 call for interest in the RFC
+      4148 registry. Therefore, the IETF could now declare the registry
+      Historic without any further reservations. 
+</p>
+<p>When a registry is declared Historic, it simply prevents IANA from
+      registering new objects, in this case new metrics. So, even if a
+      registry user was eventually found, they could continue to use the
+      current registry and its contents will continue to be available.
+</p>
 <a name="anchor2"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.2"></a><h3>2.&nbsp;
@@ -289,8 +301,9 @@ Recommendation to Reclassify RFC 4148 and Withdraw the corresponding IANA regist
 Security Considerations</h3>
 
 <p>This memo and its recommendations have no known impact on the
-      security of the Internet (especially if there is a a zombie apocalypse
-      on the day it is published).
+      security of the Internet (especially if there is a zombie apocalypse on
+      the day it is published; humans will have many more security issues to
+      worry about stemming from the rise of the un-dead).
 </p>
 <a name="IANA"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
