draft-nir-ipsecme-childless-05

--- a/draft-nir-ipsecme-childless-05.html
+++ b/draft-nir-ipsecme-childless-05.html
@@ -153,14 +153,14 @@
 <tr><td class="header">Network Working Group</td><td class="header">Y. Nir</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Check Point</td></tr>
 <tr><td class="header">Intended status: Experimental</td><td class="header">H. Tschofenig</td></tr>
-<tr><td class="header">Expires: January 1, 2011</td><td class="header">NSN</td></tr>
+<tr><td class="header">Expires: February 13, 2011</td><td class="header">NSN</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">H. Deng</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">China Mobile</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">R. Singh</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Cisco</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">June 30, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">August 12, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />A Childless Initiation of the IKE SA<br />draft-nir-ipsecme-childless-04</h1>
+<h1><br />A Childless Initiation of the IKE SA<br />draft-nir-ipsecme-childless-05</h1>
 
 <h3>Abstract</h3>
 
@@ -182,7 +182,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on January 1, 2011.</p>
+This Internet-Draft will expire on February 13, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -203,7 +203,7 @@ described in the Simplified BSD License.</p>
 <a name="rfc.section.1"></a><h3>1.&nbsp;
 Introduction</h3>
 
-<p> IKEv2, as specified in <a class='info' href='#RFC4306'>[RFC4306]<span> (</span><span class='info'>Kaufman, C., &ldquo;Internet Key Exchange (IKEv2) Protocol,&rdquo; December&nbsp;2005.</span><span>)</span></a>, requires that the IKE_AUTH exchange try
+<p> IKEv2, as specified in <a class='info' href='#IKEv2bis'>[IKEv2bis]<span> (</span><span class='info'>Kaufman, C., Hoffman, P., Nir, Y., and P. Eronen, &ldquo;Internet Key Exchange Protocol: IKEv2,&rdquo; May&nbsp;2010.</span><span>)</span></a>, requires that the IKE_AUTH exchange try
         to create a Child SA along with the IKE SA. This requirement is sometimes inconvenient or  
         superfluous, as some implementations need to use IKE for authentication only, while others 
         would like to set up the IKE SA before there is any actual traffic to protect. The extension
@@ -301,7 +301,7 @@ Protocol Outline</h3>
 <a name="rfc.section.4"></a><h3>4.&nbsp;
 CHILDLESS_IKE_SUPPORTED Notification</h3>
 
-<p> The Notify payload is as described in <a class='info' href='#RFC4306'>[RFC4306]<span> (</span><span class='info'>Kaufman, C., &ldquo;Internet Key Exchange (IKEv2) Protocol,&rdquo; December&nbsp;2005.</span><span>)</span></a>
+<p> The Notify payload is as described in <a class='info' href='#IKEv2bis'>[IKEv2bis]<span> (</span><span class='info'>Kaufman, C., Hoffman, P., Nir, Y., and P. Eronen, &ldquo;Internet Key Exchange Protocol: IKEv2,&rdquo; May&nbsp;2010.</span><span>)</span></a>
 </p><div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
                          1                   2                   3
      0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1
@@ -316,7 +316,7 @@ CHILDLESS_IKE_SUPPORTED Notification</h3>
 <li>Protocol ID (1 octet) MUST be 1, as this message is related to an IKE SA.
 </li>
 <li>SPI Size (1 octet) MUST be zero, in conformance with section 3.10 of 
-              <a class='info' href='#RFC4306'>[RFC4306]<span> (</span><span class='info'>Kaufman, C., &ldquo;Internet Key Exchange (IKEv2) Protocol,&rdquo; December&nbsp;2005.</span><span>)</span></a>.
+              <a class='info' href='#IKEv2bis'>[IKEv2bis]<span> (</span><span class='info'>Kaufman, C., Hoffman, P., Nir, Y., and P. Eronen, &ldquo;Internet Key Exchange Protocol: IKEv2,&rdquo; May&nbsp;2010.</span><span>)</span></a>.
 </li>
 <li>Childless Notify Message Type (2 octets) - MUST be xxxxx, the value assigned for 
               CHILDLESS_IKE_SUPPORTED. TBA by IANA.
@@ -328,19 +328,19 @@ CHILDLESS_IKE_SUPPORTED Notification</h3>
 Modified IKE_AUTH Exchange</h3>
 
 <p> For brevity, only the EAP version of an AUTH exchange will be presented here. The 
-          non-EAP version is very similar. The figures below are based on appendix A.3 of 
-          <a class='info' href='#RFC4718'>[RFC4718]<span> (</span><span class='info'>Eronen, P. and P. Hoffman, &ldquo;IKEv2 Clarifications and Implementation Guidelines,&rdquo; October&nbsp;2006.</span><span>)</span></a>.
+          non-EAP version is very similar. The figures below are based on appendix C.3 of 
+          <a class='info' href='#IKEv2bis'>[IKEv2bis]<span> (</span><span class='info'>Kaufman, C., Hoffman, P., Nir, Y., and P. Eronen, &ldquo;Internet Key Exchange Protocol: IKEv2,&rdquo; May&nbsp;2010.</span><span>)</span></a>.
 </p><div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
  first request       --&gt; IDi,
                          [N(INITIAL_CONTACT)],
                          [[N(HTTP_CERT_LOOKUP_SUPPORTED)], CERTREQ+],
                          [IDr],
                          [CP(CFG_REQUEST)],
-                         [V+]
+                         [V+][N+]
 
  first response      &lt;-- IDr, [CERT+], AUTH,
                          EAP,
-                         [V+]
+                         [V+][N+]
 
                    / --&gt; EAP
  repeat 1..N times |
@@ -350,8 +350,7 @@ Modified IKE_AUTH Exchange</h3>
 
  last response       &lt;-- AUTH,
                          [CP(CFG_REPLY)],
-                         [N(ADDITIONAL_TS_POSSIBLE)],
-                         [V+]
+                         [V+][N+]
 </pre></div>
 <p> Note what is missing:</p>
 <ul class="text">
@@ -372,7 +371,7 @@ Modified IKE_AUTH Exchange</h3>
 Security Considerations</h3>
 
 <p> This protocol variation inherits all the security properties of regular IKEv2 as 
-          described in <a class='info' href='#RFC4306'>[RFC4306]<span> (</span><span class='info'>Kaufman, C., &ldquo;Internet Key Exchange (IKEv2) Protocol,&rdquo; December&nbsp;2005.</span><span>)</span></a>.
+          described in <a class='info' href='#IKEv2bis'>[IKEv2bis]<span> (</span><span class='info'>Kaufman, C., Hoffman, P., Nir, Y., and P. Eronen, &ldquo;Internet Key Exchange Protocol: IKEv2,&rdquo; May&nbsp;2010.</span><span>)</span></a>.
 </p>
 <p> The new notification carried in the initial exchange advertises the capability, and 
 	      cannot be forged or added by an adversary without being detected, because the response to 
@@ -395,12 +394,10 @@ References</h3>
 <a name="rfc.references1"></a><br /><hr />
 <h3>8.1.&nbsp;Normative References</h3>
 <table width="99%" border="0">
+<tr><td class="author-text" valign="top"><a name="IKEv2bis">[IKEv2bis]</a></td>
+<td class="author-text">Kaufman, C., Hoffman, P., Nir, Y., and P. Eronen, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-ipsecme-ikev2bis-11.txt">Internet Key Exchange Protocol: IKEv2</a>,&rdquo; draft-ietf-ipsecme-ikev2bis-11 (work in progress), May&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-ipsecme-ikev2bis-11.txt">TXT</a>, <a href="http://tools.ietf.org/html/draft-ietf-ipsecme-ikev2bis">HTML</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC2119">[RFC2119]</a></td>
 <td class="author-text"><a href="mailto:sob@harvard.edu">Bradner, S.</a>, &ldquo;<a href="http://tools.ietf.org/html/rfc2119">Key words for use in RFCs to Indicate Requirement Levels</a>,&rdquo; BCP&nbsp;14, RFC&nbsp;2119, March&nbsp;1997 (<a href="ftp://ftp.isi.edu/in-notes/rfc2119.txt">TXT</a>, <a href="http://tools.ietf.org/html/rfc2119">HTML</a>).</td></tr>
-<tr><td class="author-text" valign="top"><a name="RFC4306">[RFC4306]</a></td>
-<td class="author-text">Kaufman, C., &ldquo;<a href="http://tools.ietf.org/html/rfc4306">Internet Key Exchange (IKEv2) Protocol</a>,&rdquo; RFC&nbsp;4306, December&nbsp;2005 (<a href="http://www.ietf.org/rfc/rfc4306.txt">TXT</a>, <a href="http://tools.ietf.org/html/rfc4306">HTML</a>).</td></tr>
-<tr><td class="author-text" valign="top"><a name="RFC4718">[RFC4718]</a></td>
-<td class="author-text">Eronen, P. and P. Hoffman, &ldquo;<a href="http://tools.ietf.org/html/rfc4718">IKEv2 Clarifications and Implementation Guidelines</a>,&rdquo; RFC&nbsp;4718, October&nbsp;2006 (<a href="http://www.ietf.org/rfc/rfc4718.txt">TXT</a>, <a href="http://tools.ietf.org/html/rfc4718">HTML</a>).</td></tr>
 </table>
 
 <a name="rfc.references2"></a><br /><hr />
